--- a/zustand/package.json
+++ b/zustand/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "reselect": "^5.1.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
